--- a/julia_code/Project.toml
+++ b/julia_code/Project.toml
@@ -5,4 +5,5 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
